# proof-conversion

./: .gitignore  .npmignore  README.md  convert_plonk.sh  convert_proofs.sh  package-lock.json  package.json  tsconfig.json
.github/: CODEOWNERS
.github/workflows/: branch-protection.yml  build.yml  ci-cd.yml  protect-workflow.yml  quality-gate.yml
contracts/: package.json
contracts/src/: node_resolver.ts
example-proofs/: risc_zero_args_raw_vk.json  risc_zero_obj.json  risc_zero_proof.json  sp1_args_v5_encoded_proof.json  sp1_args_v5_hex_pi.json  sp1_args_v5_program_vk.json  sp1_obj_v5.json  v3.json  v4-issue-1.json  v4.json  v4.json.sp1ToPlonk.json
new-example-proofs/: 10809760-v4.0.0-rc.3.json  1736168227.json  1736633250.json  fibonacciV2.json  fibonacciV3.json
pairing-utils/: Cargo.toml  NOTES.md  README.md  build.sh  build2.sh  package.json.template
pairing-utils/src/: lib.rs  wasm.rs
proofs-to-run/: 10900640-v4.0.0-rc.3.json
scripts/: e2e_groth16.sh  e2e_plonk.sh  e2e_verify_plonk.sh  get_aux_witness_groth16.sh  get_aux_witness_plonk.sh  groth16_tree.sh  plonk_tree.sh  plonk_tree_old.sh
scripts/blobstream_example/: blobInclusionSP1Proof.json  blobstreamSP1Proof.json  e2e_blobstream_inclusion.sh
scripts/risc_zero_example/: e2e_risc_zero.sh  risc_zero_raw_vk.json
src/: array_list_hasher.ts  aux_witness.ts  build_vk_tree.ts  compile_recursion_vks.ts  index.min.ts  index.ts  line_parser.ts  node_resolver.ts  structs.ts  tree_of_vks.ts
src/api/: methodDecorator.ts
src/blobstream/: batcher.ts  blobstream_contract.ts  prove_zkps.ts  rollup.ts  (+3 more)
(+195 files in other folders)
